--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,28 @@
   text-align: center;
 }
 
+.important {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.alert-container {
+  position: fixed;
+  top: 0px;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
